# alfrd

./: .gitignore  LICENSE  README.md  ex-alfrd.ipynb  setup.cfg  setup.py
src/alfrd/: __init__.py  lib.py  plugins.py  util.py
src/alfred/: __init__.py  lib.py
