[metadata]
name = alfrd
version = 0.0.5
author = Avinash Kumar
author_email = avialxee@gmail.com
description = Automated Logical FRamework for Dynamic script execution(ALFRD)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/alfrd/
project_urls =
    Bug Tracker = https://github.com/avialxee/alfrd/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src