[metadata]
name = alfrd
version = 0.1.0
author = Avinash Kumar
author_email = avialxee@gmail.com
description = Automated Logical FRamework for Dynamic script execution (ALFRD)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/alfrd/
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research

[options]
packages = find:
package_dir =
    = src
py_modules = alfrd
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    gspread
    gspread-formatting
    pandas
    numpy
    psutil
    typer
    protobuf==3.19.6

[options.extras_require]
dev =
    pytest>=3.7

[options.entry_points]
console_scripts =
    alfrd = alfrd:alfrd_cli
